Change account id to optional. (#2)
* Move Diameter operations into one controller

* Moved operations to one controller - clean up

* Made account id optional.
